MCp transition from fast api and upgrade of python version

--- a/mcp_servers/docker-compose-optimized.yml
+++ b/mcp_servers/docker-compose-optimized.yml
@@ -1,25 +1,15 @@
 #
-# MCP Server Docker Compose Orchestration
+# Optimized MCP Server Docker Compose Orchestration
 #
-# This file defines all MCP servers and supporting containers for the Pentest-Agent architecture.
-# Each service is documented with its purpose and the Dockerfile it uses.
+# This version uses a combined ZAP container (daemon + MCP server) instead of two separate containers.
 #
 # Services:
-#   - kali:      Kali Linux container with proper MCP server for shell/pentest tools (kali.Dockerfile)
-#   - websearch: Web search MCP server (websearch.Dockerfile)
-#   - discovery: Lightweight web app discovery/spidering MCP server (discovery.Dockerfile)
-#   - rag:       RAG knowledge base MCP server (rag.Dockerfile)
-#   - zap:       Combined ZAP daemon + proper MCP server (zap_combined.Dockerfile, port 8090)
+#   - kali:      Kali Linux container with MCP server for shell/pentest tools (kali.Dockerfile, port 8001)
+#   - websearch: Web search MCP server (websearch.Dockerfile, port 8002)
+#   - discovery: Lightweight web app discovery/spidering MCP server (discovery.Dockerfile, port 8003)
+#   - rag:       RAG knowledge base MCP server (rag.Dockerfile, port 8004)
+#   - zap:       Combined ZAP daemon + MCP server (zap_combined.Dockerfile, ports 8005, 8090)
 #   - playwright: Playwright browser automation (playwright.Dockerfile)
-#
-# Container Naming Convention:
-#   - MCP servers: mcp-{service} (e.g., mcp-kali, mcp-zap, mcp-websearch)
-#   - Non-MCP services: {prefix}-{service} (e.g., pentest-playwright)
-#
-# MCP Protocol:
-#   - All MCP servers use stdio communication (no HTTP ports needed)
-#   - Proper MCP protocol with tool schemas and validation
-#   - Interoperable with any MCP-compliant client
 #
 services:
   playwright:
@@ -36,14 +26,15 @@ services:
     build:
       context: .
       dockerfile: zap_combined.Dockerfile  # Combined ZAP daemon + MCP server
-    container_name: mcp-zap
+    container_name: pentest-zap-combined
     ports:
+      - "8005:8005"  # MCP ZAP server
       - "8090:8090"  # ZAP API/UI (for debugging/access)
     networks:
       - mcp-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8090/JSON/core/view/version/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8005/docs"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -53,7 +44,9 @@ services:
     build:
       context: .
       dockerfile: kali.Dockerfile  # Kali MCP server (shell/pentest tools)
-    container_name: mcp-kali
+    container_name: kali
+    ports:
+      - "8001:8001"  # MCP Kali server
     networks:
       - mcp-network
     restart: unless-stopped
@@ -63,6 +56,8 @@ services:
       context: .
       dockerfile: websearch.Dockerfile  # Web search MCP server
     container_name: mcp-websearch
+    ports:
+      - "8002:8002"  # MCP WebSearch server
     networks:
       - mcp-network
     restart: unless-stopped
@@ -72,6 +67,8 @@ services:
       context: .
       dockerfile: discovery.Dockerfile  # Lightweight web app discovery/spidering MCP server
     container_name: mcp-discovery
+    ports:
+      - "8003:8003"  # MCP Discovery server
     networks:
       - mcp-network
     restart: unless-stopped
@@ -81,6 +78,8 @@ services:
       context: .
       dockerfile: rag.Dockerfile  # RAG knowledge base MCP server
     container_name: mcp-rag
+    ports:
+      - "8004:8004"  # MCP RAG server
     networks:
       - mcp-network
     restart: unless-stopped
