--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ click = "^8.1.0"
 rich = "^13.0.0"
 typer = "^0.9.0"
 langchain-community = "^0.3.27"
+langchain-ollama = "^0.3.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
