--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
 dependencies = [
-    "langchain = "^0.3.26"
-    "langchain-community = "^0.3.27"
+    "langchain>=0.3.26",
+    "langchain-community>=0.3.27"
 ] 
