--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ rich = "^13.0.0"
 typer = "^0.9.0"
 langchain-community = "^0.3.27"
 langchain-ollama = "^0.3.6"
+nest-asyncio = "^1.6.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0.0"
